# py-avro-schema

./: Makefile  README.md  pyproject.toml
.github/workflows/: release-package.yml  test-package.yml
src/py_avro_schema/: __init__.py  _alias.py  _schemas.py  _testing.py  _typing.py
tests/: test_avro_name_for_type.py  test_avro_schema.py  test_dataclass.py  test_logicals.py  test_plain_class.py  test_primitives.py  test_pydantic.py  test_typed_dict.py  test_typing.py
