# Copyright 2022 J.P. Morgan Chase & Co.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.


# Project configuration file

[project]

name = "localstack-py-avro-schema"
dynamic = ["version"]

authors = [
    { name = "LocalStack Contributors", email = "info@localstack.cloud" },
    { name = "J.P. Morgan Chase & Co.", email = "open_source@jpmorgan.com" }
]
description = "Generate Apache Avro schemas for Python types including standard library data-classes and Pydantic data models."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
keywords = [
    "avro",
    "data",
    "dataclasses",
    "deserialization",
    "generate",
    "jpmorganchase",
    "kafka",
    "messaging",
    "pydantic",
    "python",
    "schema",
    "serialization",
    "types",
]

# Minimum supported Python version
requires-python = ">=3.13"
# All runtime dependencies that must be packaged, pin major version only.
dependencies = [
    "avro~=1.10",
    "memoization~=0.4",
    "more-itertools~=10.0",
    "orjson~=3.5",
    "typeguard==2.13.3",    # LS dev dependency `constructs` pins to 2.13.3
]


[project.urls]

"Homepage" = "https://github.com/localstack/py-avro-schema"
"Bug Tracker" = "https://github.com/localstack/py-avro-schema/issues"
"Documentation" = "https://py-avro-schema.readthedocs.io"
"Download" = "https://pypi.python.org/pypi/py-avro-schema"
"Source Code" = "https://github.com/localstack/py-avro-schema"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".venv",
    "venv*",
    "dist",
    "build",
    "target",
    "*.egg-info",
    ".git"
]

[tool.ruff.lint]
ignore = ["UP007", "UP045", "UP013", "B008", "B904"]
select = ["B", "C", "E", "F", "I", "W", "T", "B9", "G", "UP"]

[dependency-groups]

testing = [
    "packaging",  # A test case uses packaging.version.Version
    "pydantic>=2",
    "pytest",
    "pytest-cov",
]
linting = [
    "pre-commit",
    "ruff>=0.6.9",
    "pydantic>=2",  # For mypy
]


[build-system]

requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
# Section required to populate package version from Git tag

